src/test/ui/rfc-2093-infer-outlives/self-structs.stderr
error: rustc_outlives
  --> $DIR/self-structs.rs:15:1
   |
LL | / struct Foo<'a, 'b, T> { //~ ERROR 15:1: 17:2: rustc_outlives
LL | |     field1: Bar<'a, 'b, T>
LL | | }
   | |_^
   |
   = note: T : 'a

error: aborting due to previous error

